<resources>
    <string name="app_name">RpgCompanionApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="back">Back</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="create_character">Create character</string>
    <string name="character_name">Character name</string>
    <string name="race">Race</string>
    <string name="class_name">Class</string>
    <string name="level">Level</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="skills">Skills</string>
    <string name="saving_throws">Saving throws</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="fab_add_character">Add character</string>
    <string name="fab_open_settings">Open settings</string>
    <string name="login_fill_fields">Fill in all fields</string>
    <string name="login_mock_message">Login screen is ready, real request disabled for now</string>
</resources>