<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/theme"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/themeSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system" />

        <RadioButton
            android:id="@+id/themeLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/themeDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/language"
        android:textSize="18sp" />
    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/languageRu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian" />

        <RadioButton
            android:id="@+id/languageEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

    </RadioGroup>

</LinearLayout>